--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity"
-                  android:launchMode="singleTask">
+        <activity android:name=".activity.MainActivity">
         </activity>
         <activity android:name=".activity.PreviewActivity">
         </activity>
