--- a/galleryhome/src/main/AndroidManifest.xml
+++ b/galleryhome/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".activity.PermissionActivity"
+            android:theme="@style/EmptyTheme"
+            android:label=""/>
     </application>
 
 </manifest>
